--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1698,7 +1698,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ffeb6ea8",
+   "id": "5864f116",
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1721,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "b04c2005",
+   "id": "30395667",
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2058,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "716728c3",
+   "id": "bb85cda8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "acc751f3",
+   "id": "120150a4",
    "metadata": {},
    "outputs": [
     {
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "c9cd058d",
+   "id": "78cc306d",
    "metadata": {},
    "outputs": [
     {
@@ -2116,7 +2116,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "a24e5e1d",
+   "id": "dda4694c",
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "967e19dd",
+   "id": "c6075f90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2161,7 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "ec765591",
+   "id": "9d773ccc",
    "metadata": {},
    "outputs": [
     {
@@ -2200,7 +2200,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "64e87876",
+   "id": "c19fc2f1",
    "metadata": {},
    "outputs": [
     {
@@ -2330,7 +2330,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "2c5b2d8b",
+   "id": "cc3094a2",
    "metadata": {},
    "outputs": [
     {
@@ -2368,7 +2368,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "0d225cab",
+   "id": "8cf7e4d2",
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2407,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "592bd9e2",
+   "id": "f8ec3e28",
    "metadata": {},
    "outputs": [
     {
@@ -2445,7 +2445,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0afc3740",
+   "id": "e20e1da4",
    "metadata": {},
    "outputs": [
     {
@@ -2484,7 +2484,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "91be9310",
+   "id": "f88dc1ba",
    "metadata": {},
    "outputs": [
     {
@@ -2522,7 +2522,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "1756edc0",
+   "id": "50ea65d7",
    "metadata": {},
    "outputs": [
     {
@@ -2557,7 +2557,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "cff1ad39",
+   "id": "f553f394",
    "metadata": {},
    "outputs": [
     {
@@ -2807,7 +2807,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "46dba269",
+   "id": "284f6178",
    "metadata": {},
    "outputs": [
     {
@@ -2846,7 +2846,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "172b623e",
+   "id": "3762bc19",
    "metadata": {},
    "outputs": [
     {
@@ -2885,7 +2885,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "579ce48a",
+   "id": "7d87da5b",
    "metadata": {},
    "outputs": [
     {
@@ -3033,7 +3033,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "3d3f1ed5",
+   "id": "f4bb8019",
    "metadata": {},
    "outputs": [
     {
@@ -3181,7 +3181,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "19d4da08",
+   "id": "87d102df",
    "metadata": {},
    "outputs": [
     {
@@ -3220,7 +3220,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "de04e3e9",
+   "id": "cad443c7",
    "metadata": {},
    "outputs": [
     {
@@ -3259,7 +3259,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "39f91cca",
+   "id": "035fe93e",
    "metadata": {},
    "outputs": [
     {
@@ -3297,7 +3297,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "e29bebd6",
+   "id": "116fb122",
    "metadata": {},
    "outputs": [
     {
@@ -3335,7 +3335,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "5f82be28",
+   "id": "320ce3d8",
    "metadata": {},
    "outputs": [
     {
@@ -3484,7 +3484,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "77d3def4",
+   "id": "79b847e2",
    "metadata": {},
    "outputs": [
     {
@@ -3523,7 +3523,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "7d77dafd",
+   "id": "759d8dcd",
    "metadata": {},
    "outputs": [
     {
@@ -3561,7 +3561,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "adfc7723",
+   "id": "e8c52754",
    "metadata": {},
    "outputs": [
     {
@@ -3715,7 +3715,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "053e2b80",
+   "id": "aa8d7cb0",
    "metadata": {},
    "outputs": [
     {
@@ -3864,7 +3864,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "fe2625d9",
+   "id": "147fac1b",
    "metadata": {},
    "outputs": [
     {
@@ -4011,8 +4011,298 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 110,
+   "id": "6290882d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "d13308d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "eddd4628",
+   "id": "efd1d393",
    "metadata": {},
    "outputs": [],
    "source": []
